tests/snapshots/integration_test__log_data@e6797f3623b0c83a83f575e7f627dc39.snap
---
source: tests/integration_test.rs
expression: record
info: "type=PROCTITLE msg=audit(1451781471.394:194440): proctitle=737368643A206275726E205B707269765D"
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1451781471394,
  "id": 194440,
  "fields": {
    "proctitle": "sshd: burn [priv]"
  }
}
