tests/snapshots/integration_test__log_data@e6ac45b1a8b919d9523972e3b6140cc1.snap
---
source: tests/integration_test.rs
expression: record
info: "type=SOCKADDR msg=audit(1490816924.990:517645): saddr=00000000000000000000000000000000"
---
{
  "record_type": "SOCKADDR",
  "timestamp": 1490816924990,
  "id": 517645,
  "fields": {
    "saddr": "00000000000000000000000000000000"
  }
}
