tests/snapshots/integration_test__log_data@e96d61a0aa6db5b5aa86f529c8a08bd8.snap
---
source: tests/integration_test.rs
expression: record
info: "type=SOCKADDR msg=audit(1490816924.990:517647): saddr=01002F7661722F72756E2F6E7363642F736F636B65740000603B7B47FC7F0000303C7B47FC7F0000020000000000000014000000160001030800000000000000C03B7B47FC7F0000103B7B47FC7F00002000000000000000303C7B47FC7F0000C0FB39861C7F0000787F2F861C7F"
---
{
  "record_type": "SOCKADDR",
  "timestamp": 1490816924990,
  "id": 517647,
  "fields": {
    "saddr": "01002F7661722F72756E2F6E7363642F736F636B65740000603B7B47FC7F0000303C7B47FC7F0000020000000000000014000000160001030800000000000000C03B7B47FC7F0000103B7B47FC7F00002000000000000000303C7B47FC7F0000C0FB39861C7F0000787F2F861C7F"
  }
}
