tests/snapshots/integration_test__log_data@eab7ddc8984ae18921f967007581c35c-2.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/auparse/test3.log:11"
expression: result
info: "node=auditdtest.a1959.org type=PROCTITLE msg=audit(1451781471.394:194439): proctitle=737368643A206275726E205B707269765D"
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1451781471394,
  "id": 194439,
  "node": "auditdtest.a1959.org",
  "fields": {
    "proctitle": "sshd: burn [priv]"
  }
}
