tests/snapshots/integration_test__log_data@eb7d8445b9d6f0c793be81fb970f57e7.snap
---
source: tests/integration_test.rs
expression: record
info: "type=SOCKADDR msg=audit(1490816924.990:517644): saddr=0A000016000000000000000000000000000000000000000000000000"
---
{
  "record_type": "SOCKADDR",
  "timestamp": 1490816924990,
  "id": 517644,
  "fields": {
    "saddr": {
      "address": "[::]:22",
      "family": "AF_INET6"
    }
  }
}
